# CompanyAssistant

./: .gitignore  README.md  apex_crm.db  auth_calendar.py  langgraph.json  narsun.json  pyproject.toml  requirements.txt  test_debug.py  test_full.py  test_rag.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
prompts/: system_prompt.json
rag_documents/: apec_company_info.json  apec_company_profile.txt
src/: __init__.py
src/agent/: graph.py
src/database/: crm.py
src/integrations/: supabase_crm.py
src/rag/: retriever.py
src/tools/: calendar_tools.py  lead_tools.py
src/utils/: calendar_creator.py
